// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the AdminCards Component should match snapshot 1`] = `
<Fragment>
  <p
    className="adminCardsP"
  >
    Add new product
  </p>
  <div
    className="categoryCardContainer"
  >
    <Card
      className="categoryCard"
    >
      <Image
        as="img"
        src=""
        ui={true}
      />
      <CardContent
        extra={true}
      >
        <CardHeader
          className="adminCardTitle"
        />
        <CardDescription
          className="adminCardDescription"
        />
        <CardDescription
          className="adminCardDescription"
        />
        <Button
          animated={true}
          as="button"
        >
          <ButtonContent
            visible={true}
          >
            Add to Cart
          </ButtonContent>
          <ButtonContent
            hidden={true}
          >
            <Icon
              as="i"
              name="arrow right"
            />
          </ButtonContent>
        </Button>
      </CardContent>
    </Card>
  </div>
</Fragment>
`;

exports[`Test the AdminCards Component should match snapshot 2`] = `
<Fragment>
  <p
    className="adminCardsP"
  >
    Add new product
  </p>
  <div
    className="categoryCardContainer"
  >
    <Card
      className="categoryCard"
    >
      <Image
        as="img"
        src=""
        ui={true}
      />
      <CardContent
        extra={true}
      >
        <CardHeader
          className="adminCardTitle"
        />
        <CardDescription
          className="adminCardDescription"
        />
        <CardDescription
          className="adminCardDescription"
        />
        <div
          className="ui two buttons adminActions"
        >
          <Button
            as="button"
            basic={true}
            color="green"
          >
            Edit
          </Button>
          <Button
            as="button"
            basic={true}
            color="red"
          >
            Delete
          </Button>
        </div>
      </CardContent>
    </Card>
  </div>
</Fragment>
`;
